Cosmetic changes.
Added test for equals and hashCode of LinkedList.